@@ -67,13 +67,13 @@ Support for Java 17 has been dropped.
 
 #### Historical tier aliases
 
-You can now use the `historicalTierAliases` Coordinator dynamic configuration to map a virtual tier name to a set of real Historical tiers so that a group of Historical tiers have a single identifier. When a load/drop rule references the alias, the Coordinator replaces it with the actual  tiers. For example, if you map the Historical tiers `hot_1` and `hot_2` to the alias `hot`, the rule `{"hot": 2}` loads 2 replicas of each onto `hot_1` and `hot_2`.
+You can now use the `historicalTierAliases` Coordinator dynamic configuration to map a virtual tier name to a set of real Historical tiers so that a group of Historical tiers has a single identifier. When a load/drop rule references the alias, the Coordinator replaces it with the actual tiers. For example, if you map the Historical tiers `hot_1` and `hot_2` to the alias `hot`, the rule `{"hot": 2}` loads 2 replicas of each onto `hot_1` and `hot_2`.
 
 [#19204](https://github.com/apache/druid/pull/19204) [#19667](https://github.com/apache/druid/pull/19667)
 
 #### New load rule types (WIP)
 
-Adds a new family of retention rules, loadPartialByPeriod, loadPartialByInterval, loadPartialForever, laying the groundwork for partial loading of V10 segment projections on historicals. 
+Adds a new family of retention rules, `loadPartialByPeriod`, `loadPartialByInterval`, `loadPartialForever`, laying the groundwork for partial loading of v10 segment projections on Historicals. 
 
 [#19374](https://github.com/apache/druid/pull/19374)
 
@@ -87,7 +87,7 @@ You can set `realtimeSegmentsMode` to one of the following:
 - `exclude`: skip realtime segments for the query
 - `exclusive`: query only realtime segments 
 
-This is useful when performing things like blue/green deployments and you only want to query new historical replica autoscaling groups and not touch any "live" nodes (neither realtime nor historical).
+This is useful when performing things like blue/green deployments and you only want to query new Historical replica autoscaling groups and not touch any "live" nodes (neither realtime nor historical).
 
 [#19486](https://github.com/apache/druid/pull/19486)
 
@@ -101,7 +101,7 @@ This feature is on by default and is controlled by the `backgroundFetchExternalF
 
 #### Segment prefetching for Dart
 
-Dart now supports the runtime property `druid.msq.dart.worker.segmentLoadAheadCount`, which controls the number of segments that Dart prefetches. If configured to be greater than 0 for a worker, this becomes the default `segmentLoadAheadCount` value for the worker. If a query includes the `segmentLoadAheadCount` query context parameter, the query context takes precedence.  
+Dart now supports the runtime property `druid.msq.dart.worker.segmentLoadAheadCount`, which controls the number of segments that Dart prefetches. If configured to be greater than 0 for a worker, this becomes the default `segmentLoadAheadCount` value for the worker. If a query includes the `segmentLoadAheadCount` query context parameter, the query context takes precedence.
 
 [#19559](https://github.com/apache/druid/pull/19559)
 
@@ -117,7 +117,7 @@ Dart now supports the runtime property `druid.msq.dart.worker.segmentLoadAheadCo
 
 #### Improved Convert to SQL in web console
 
-The web console now supports converting streaming supervisors to SQL-based ingestion SQL queries. This makes it easier for you to run a streaming task as a one time batch ingestion.
+The web console now supports converting streaming supervisors to SQL-based ingestion queries. This makes it easier for you to run a streaming task as a one-time batch ingestion.
 
 Select the **Convert supervisor to SQL** option from the **...** menu in the Query view. You can select from existing supervisors or provide JSON for a new one.
 
@@ -131,16 +131,16 @@ This section contains detailed release notes separated by areas.
 
 #### Other web console improvements
 
-- Added the following status details to the **Services** view for Historical services: cloning from another, historical, in turbo loading mode, in decommissioning mode [#19253](https://github.com/apache/druid/pull/19253)
+- Added the following status details to the **Services** view for Historical services: cloning from another Historical, in turbo loading mode, in decommissioning mode [#19253](https://github.com/apache/druid/pull/19253)
 - Added support for resetting a supervisor to the latest offsets and backfilling [#19533](https://github.com/apache/druid/pull/19533)
 - Improved how new tabs are handled [#19483](https://github.com/apache/druid/pull/19483)
-- Improved the Home view's **Services** card. It now  reports Overlord, Coordinator, Router, Broker, and Indexer counts on clusters where the web console talks to the coordinator without SQL access [#19481](https://github.com/apache/druid/pull/19481)  
+- Improved the Home view's **Services** card. It now reports Overlord, Coordinator, Router, Broker, and Indexer counts on clusters where the web console talks to the Coordinator without SQL access [#19481](https://github.com/apache/druid/pull/19481)  
 
 ### Ingestion
 
-* You can now use the expression aggregator at ingestion time for expressions which produce a LONG or DOUBLE for both fold and combine expressions [#19508](https://github.com/apache/druid/pull/19508)
-* Added `now()` expression function that returns the current system timestamp in milliseconds since epoch. Useful at ingestion time for troubleshooting pipeline delays (e.g., `now() - __time`). Note: `now()` is non-deterministic as it evaluates for every row, so it can break idempotency. This can only be added to columns that are not __time [#19386](https://github.com/apache/druid/pull/19386)
-* Improved resiliency when ingesting from S3. Druid now retries on `SSLException`  and transient credential errors instead of failing [#19617](https://github.com/apache/druid/pull/19617) [#19558](https://github.com/apache/druid/pull/19558)
+* You can now use the expression aggregator at ingestion time for expressions that produce a LONG or DOUBLE for both fold and combine expressions [#19508](https://github.com/apache/druid/pull/19508)
+* Added `now()` expression function that returns the current system timestamp in milliseconds since epoch. Useful at ingestion time for troubleshooting pipeline delays (e.g., `now() - __time`). Note: `now()` is non-deterministic as it evaluates for every row, so it can break idempotency. This can be added to any besides `__time` [#19386](https://github.com/apache/druid/pull/19386)
+* Improved resiliency when ingesting from S3. Druid now retries on `SSLException` and transient credential errors instead of failing [#19617](https://github.com/apache/druid/pull/19617) [#19558](https://github.com/apache/druid/pull/19558)
 * Improved S3 performance [#19394](https://github.com/apache/druid/pull/19394)
 * Updated the default S3 connection pool size so that it's computed based on the number of available processors [#19536](https://github.com/apache/druid/pull/19536)
 
@@ -148,7 +148,7 @@ This section contains detailed release notes separated by areas.
 
 ##### EXTERN for S3 now supports role ARN
 
-You can now include the role ARN when running an INSERT INTO EXTERN query. For example
+You can now include the role ARN when running an INSERT INTO EXTERN query. For example:
 
 ```
 INSERT INTO
@@ -162,23 +162,23 @@ SELECT ...
 
 ##### Other SQL-based ingestion improvements
 
-- Added storage counters for the amount of bytes and files written to local and durable strage as well as the state of the local `ByteTracker`. Per-worker storage counters have also been added to the web console [#19316](https://github.com/apache/druid/pull/19316)
+- Added storage counters for the amount of bytes and files written to local and durable storage as well as the state of the local `ByteTracker`. Per-worker storage counters have also been added to the web console [#19316](https://github.com/apache/druid/pull/19316)
 
 #### Streaming ingestion
 
 ##### Scaling cool down
 
-You can now configure different cool downs for scaling up and scaling down streaming task auto-scalers.
+You can now configure different cool downs for scaling up and scaling down streaming task autoscalers.
 
 [#19286](https://github.com/apache/druid/pull/19286)
 
-###### Improved supervisor restarts
+##### Improved supervisor restarts
 
 Supervisors no longer restart for all changes. Based on the type of change, one of the following can occur:
 
 - The updated spec is persisted without a restart
 - The supervisor is restarted but running tasks aren't impacted
-- The upservisor is restarted and its tasks are terminated (the default behavior prior to this change)
+- The supervisor is restarted and its tasks are terminated (the default behavior prior to this change)
 
 For example, cosmetic changes to a supervisor spec no longer trigger a restart.
 
@@ -205,7 +205,7 @@ Use `POST` `/druid/indexer/v1/supervisor/{supervisorId}/resetToLatestAndBackfill
 ##### Prunable shard specs for streaming published segments
 
 Kafka ingestion can now publish segments that the Broker prunes at query time without waiting for compaction. Set `tuningConfig.streamingPartitionsSpec.partitionDimensions` to a list of low-to-medium cardinality dimensions; each task records
-the distinct values it observes per dimension and stamps them onto a `new dim_value_set` shard spec. Queries that filter on a declared dimension then skip segments whose values can't match. 
+the distinct values it observes per dimension and stamps them onto a new `dim_value_set` shard spec. Queries that filter on a declared dimension then skip segments whose values can't match. 
 
 The feature is opt-in, Kafka-only, and disabled by
 default; when unset, behavior is unchanged.
@@ -213,7 +213,7 @@ default; when unset, behavior is unchanged.
 `dim_value_set` is a new core shard spec type with no fallback, so it is not forward-compatible. Upgrade all services before enabling `streamingPartitionsSpec`. Once `dim_value_set` segments are published, downgrade is unsupported
 until they are compacted away or `streamingPartitionsSpec` is removed.
 
-Added `maxValuesPerDimension` (optional) to `streamingPartitionsSpec` 
+Added `maxValuesPerDimension` (optional) to `streamingPartitionsSpec`.
   
 [#19571](https://github.com/apache/druid/pull/19571) [#19596](https://github.com/apache/druid/pull/19596)
 
@@ -235,7 +235,7 @@ The weighted query laning strategy supports optional per-threshold cost weights:
 - `segmentCountWeight`
 - `segmentRangeWeight`
 
-These thresholds weights default to 1.
+These threshold weights default to 1.
 
 [#19225](https://github.com/apache/druid/pull/19225) [#19665](https://github.com/apache/druid/pull/19665) [#19696](https://github.com/apache/druid/pull/19696)
 
@@ -262,13 +262,13 @@ MiddleManagers and Indexers now persist their enabled or disabled state across r
 
 #### Kafka idle signal
 
-Improved the cost-based auto scaler for Kafka. The `poll-idle ratio` only reflected the time spent polling, not whether or not there is spare processing capacity. You can now configure the auto-scaler to use a utilization ratio instead: 
+Improved the cost-based auto scaler for Kafka. The `poll-idle ratio` only reflected the time spent polling, whether there is spare processing capacity. You can now configure the autoscaler to use a utilization ratio instead: 
 
 ```
 1 - (avgProcessingRate / maxObservedRate)
 ```
 
-Set `useUtilizationRatio`  to `true` to use this new ratio for autoscaling. 
+Set `useUtilizationRatio` to `true` to use this new ratio for autoscaling. 
 
 [#19622](https://github.com/apache/druid/pull/19622)
 
@@ -277,18 +277,18 @@ Set `useUtilizationRatio`  to `true` to use this new ratio for autoscaling.
 
 - Added `datasource` filter pushdown to `sys.segments` table [#19718](https://github.com/apache/druid/pull/19718)
 - Added a `restarted` boolean field to the supervisor POST endpoint response to indicate whether the supervisor was actually restarted [#19349](https://github.com/apache/druid/pull/19349)
-- Added error_message column to `sys.server_properties` table and made the table resilient to unreachable servers. Previously, the entire query would fail if any server was unreachable; now a row is returned with `error_message` populated. The table also now supports filter and projection pushdown [#19459](https://github.com/apache/druid/pull/19459)
-- Added `druid.expressions.useVectorApi` config to support the incubating JDK Vector API. To use the API, set the config to `true` and start Druid with the `add-modules=jdk.incubator.vector` flag [#19512](https://github.com/apache/druid/pull/19512)
+- Added `error_message` column to `sys.server_properties` table and made the table resilient to unreachable servers. Previously, the entire query would fail if any server was unreachable; now a row is returned with `error_message` populated. The table also now supports filter and projection pushdown [#19459](https://github.com/apache/druid/pull/19459)
+- Added `druid.expressions.useVectorApi` config to support the incubating JDK Vector API. To use the API, set the config to `true` and start Druid with the `--add-modules=jdk.incubator.vector` flag [#19512](https://github.com/apache/druid/pull/19512)
 - Added debug logging at the INFO level for projections if the debug flag is set [#19613](https://github.com/apache/druid/pull/19613)
 - Changed MSQ task engine logging. It now logs the full stack trace when `debug` is set in the context [#19361](https://github.com/apache/druid/pull/19361)
-- Improved the cost-based autoscaler so that it scales down overprovisioned supervisors running above the ideal idle ratio with low lag [#19562](https://github.com/apache/druid/pull/19562)
-- Improved how Druid handles Java. Middle managers now honor `JAVA_HOME` [#19709](https://github.com/apache/druid/pull/19709)
+- Improved the cost-based autoscaler so that it scales down over-provisioned supervisors running above the ideal idle ratio with low lag [#19562](https://github.com/apache/druid/pull/19562)
+- Improved how Druid handles Java. MiddleManagers now honor `JAVA_HOME` [#19709](https://github.com/apache/druid/pull/19709)
 
 ### Data management
 
 #### Other data management improvements
 
-* Improved how compaction supervisor specs startup. They no longer attempt to create tasks with invalid configs [#19223](https://github.com/apache/druid/pull/19223)
+* Improved how compaction supervisor specs start up. They no longer attempt to create tasks with invalid configs [#19223](https://github.com/apache/druid/pull/19223)
 * Changed Historical tiers so that they can only be associated with one tier alias [#19595](https://github.com/apache/druid/pull/19595)
 * Sped up segment metadata cache syncs [#19672](https://github.com/apache/druid/pull/19672)
 
@@ -348,7 +348,7 @@ To enable this functionality, set `druid.auth.emitAuthMetrics` to `true`.
 
 #### Storage metrics
 
-The `storage/load/bytes` and `storage/virtual/load/bytes` metrics now measure once the load is complete. Previously, it measured when the load starts.
+The `storage/load/bytes` and `storage/virtual/load/bytes` metrics now measure once the load is complete. Previously, they measured when the load starts.
 
 Additionally, `storage/load/begin/bytes` and `storage/virtual/load/begin/bytes` have been introduced and have the previous function of `storage/load/bytes` and `storage/virtual/load/bytes`.
 
@@ -366,7 +366,7 @@ Added the following metrics for concurrent append and replace in realtime ingest
 - `ingest/segmentUpgrade/sendFailed`
 - `ingest/segmentUpgrade/announced`
 - `ingest/segmentUpgrade/skipped`
-  
+
 [#19651](https://github.com/apache/druid/pull/19651)
 
 #### Other metrics and monitoring improvements
@@ -376,11 +376,11 @@ Added the following metrics for concurrent append and replace in realtime ingest
 * Added `identity` dimension on `query/time` metric for the Router [#19342](https://github.com/apache/druid/pull/19342)
 * Added `kafka/consumer/pollIdleRatio`, which corresponds to the Kafka consumer `poll-idle-ratio-avg` [#19366](https://github.com/apache/druid/pull/19366)
 * Added `supervisorId` to Kafka consumer metrics [#19525](https://github.com/apache/druid/pull/19525)
-* Added `tierAlias` dimension to some tiered metrics, allowing aggregation across aliases more easily for the monitoring and alerting [#19595](https://github.com/apache/druid/pull/19595)
+* Added `tierAlias` dimension to some tiered metrics, making it easier to aggregate across aliases for the monitoring and alerting [#19595](https://github.com/apache/druid/pull/19595)
 * Added the `query/segments/count` metric to data nodes [#19624](https://github.com/apache/druid/pull/19624)
-* Added the following metrics for virtual storage: storage/virtual/read/count,  `storage/virtual/read/bytes`, `storage/virtual/read/time ` [#19632](https://github.com/apache/druid/pull/19632)
+* Added the following metrics for virtual storage: `storage/virtual/read/count`,  `storage/virtual/read/bytes`, `storage/virtual/read/time ` [#19632](https://github.com/apache/druid/pull/19632)
 * Changed `query/node/{bytes/time}` and backpressure metrics to emit even on query failure to data nodes [#19453](https://github.com/apache/druid/pull/19453)
-* Improved metrics for partial segment loading [#19632](https://github.com/apache/druid/pull/19632) [#19632](https://github.com/apache/druid/pull/19632)
+* Improved metrics for partial segment loading [#19632](https://github.com/apache/druid/pull/19632)
 * Improved router logging to always include `statusCode` dimension [#19668](https://github.com/apache/druid/pull/19668)
 
 ### Extensions
@@ -402,19 +402,19 @@ Supported values include: `client_secret_basic`, `client_secret_post`, `client_s
 #### Kubernetes
 
 - Added `sys` metrics for k8s peons [#19305](https://github.com/apache/druid/pull/19305)
-- Added experimental support for running Kubernetes indexing tasks across multiple Kubernetes clusters. Set `druid.indexer.runner.type=multik8s` and configure `druid.indexer.runner.clusters` to schedule tasks across multiple Kubernetes clusters from a single Overlor [#19433](https://github.com/apache/druid/pull/19433)
+- Added experimental support for running Kubernetes indexing tasks across multiple Kubernetes clusters. Set `druid.indexer.runner.type=multik8s` and configure `druid.indexer.runner.clusters` to schedule tasks across multiple Kubernetes clusters from a single Overlord [#19433](https://github.com/apache/druid/pull/19433)
 - `jvm.config` ConfigMaps are now honored by Peons [#19364](https://github.com/apache/druid/pull/19364)
 - You can now set `podTemplateSelectionKey` in a task's context to pick a specific configured pod template (e.g. `druid.indexer.runner.k8s.podTemplate.<selectionKey>`) without configuring a `selectorBased` strategy. The override takes precedence over both the default and `selectorBased` strategies. The feature is controlled by the new runtime property `druid.indexer.runner.allowTaskPodTemplateSelection`, which defaults to `false`. If the named template isn't configured, the task fails to launch. [#19419](https://github.com/apache/druid/pull/19419)
 
 #### T-digest sketch
 
-You can now  pin the maximum available compression on T-digest operators in order to bound resources using the `druid.tdigest.maxCompression` parameter.
+You can now pin the maximum available compression on T-digest operators to bind resources using the `druid.tdigest.maxCompression` parameter.
 
 [#19310](https://github.com/apache/druid/pull/19310)
 
-#### Open lineage
+#### OpenLineage
 
-Added `extensions-contrib/openlineage-emitter` as a contributor extension. It uses the `RequestLogger` to transform and send lineage information to any OpenLineage-compatible API.
+Added `extensions-contrib/openlineage-emitter` as a community extension. It uses the `RequestLogger` to transform and send lineage information to any OpenLineage-compatible API.
 
 [#19107](https://github.com/apache/druid/pull/19107)
 
@@ -454,7 +454,7 @@ ZooKeeper is still used for Coordinator/Overlord leader election and service (no
 
 The ZooKeeper-based segment announcement and inventory view, which have been deprecated and off by default for several releases, have been removed. The HTTP-based path (the default for `druid.serverview.type=http`) is now the only supported option.
 
-If your configuration sets druid.serverview.type to anything other than `http`, startup now fails with a clear error message. Remove the property (or set it to `http`, which is the default) to proceed.
+If your configuration sets `druid.serverview.type` to anything other than `http`, startup now fails with a clear error message. Remove the property (or set it to `http`, which is the default) to proceed.
 
 The following configuration properties are no longer recognized and should be removed from `common.runtime.properties`:
 
